<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roomba_600_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="36195395+Sadaku1993@users.noreply.github.com">yudai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rclcpp_components</build_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <test_depend>rclcpp_components</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
